--- a/saque.html
+++ b/saque.html
@@ -4,53 +4,127 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Carteira e Saque</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <style>
-    /* Ajustando a disposição dos saldos */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #000; /* Fundo preto */
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 20px;
+      background-color: #111; /* Cabeçalho escuro */
+      border-bottom: 1px solid #333;
+      color: white;
+    }
+    header a {
+      text-decoration: none;
+      color: #00f0ff;
+      font-weight: bold;
+    }
+    .carteira {
+      padding: 20px 10px;
+      text-align: center;
+    }
     .saldos {
       display: flex;
       justify-content: space-between;
-      margin: 20px 0;
-    }
-
-    .saldo {
+      align-items: center;
       text-align: center;
-      flex: 1;
-      margin: 0 10px;
+      color: white;
     }
-
+    .saldo {
+      padding: 10px;
+      background: #111;
+      width: 30%;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,240,255,0.3);
+    }
     .saldo img {
       width: 50px;
       height: 50px;
     }
-
-    /* Centralizando a seção de conta bancária */
-    .conta {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 20px;
+    .saldo p {
+      margin: 10px 0 5px;
+      font-size: 20px;
+      font-weight: bold;
     }
-
-    .conta label, .conta input, .conta select {
-      width: 80%;
-      margin-bottom: 10px;
+    .saldo span {
+      display: block;
+      font-size: 14px;
+      color: #ccc;
     }
-
-    .conta button {
-      margin-top: 20px;
+    section.conta, section.saque {
+      background: #111;
+      margin: 20px auto;
+      padding: 20px;
+      width: 90%;
+      max-width: 400px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255,255,255,0.1);
+      text-align: center;
+      color: white;
+    }
+    section h2 {
+      margin-bottom: 20px;
+      font-size: 24px;
+      color: #00f0ff;
+    }
+    label {
+      display: block;
+      text-align: left;
+      margin: 10px 0 5px;
+      font-weight: bold;
+      color: white;
+    }
+    input, select {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #555;
+      border-radius: 8px;
+      background: #222;
+      color: white;
+      font-size: 16px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      background-color: #28a745;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    button:disabled {
+      background-color: #555;
+      cursor: not-allowed;
+    }
+    #valorLiquido {
+      color: #28a745;
+    }
+    #status {
+      margin-top: 10px;
+      font-weight: bold;
+      color: #dc3545;
     }
   </style>
+
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 </head>
 <body>
 
   <!-- BARRA SUPERIOR -->
-  <header style="display: flex; justify-content: space-between; align-items: center; padding: 15px 20px; background-color: #f5f5f5; border-bottom: 1px solid #ccc;">
-    <h2 style="margin: 0;">Carteira</h2>
-    <!-- Link para ver o extrato -->
-    <a href="extrato.html" style="text-decoration: none; color: #007bff;">Ver Extrato</a>
+  <header>
+    <h2>Carteira</h2>
+    <a href="extrato.html">Ver Extrato</a>
   </header>
 
   <!-- SALDOS -->
@@ -59,17 +133,17 @@
       <div class="saldo">
         <img src="10004.png" alt="">
         <p id="saldo-conta">R$ 0.00</p>
-        <span>Saldo da conta</span>
+        <span>Saldo da Conta</span>
       </div>
       <div class="saldo">
         <img src="10004.png" alt="">
         <p id="renda-acumulada">R$ 0.00</p>
-        <span>Renda acumulada</span>
+        <span>Renda Acumulada</span>
       </div>
       <div class="saldo">
         <img src="10004.png" alt="">
         <p id="valor-recebimento">R$ 0.00</p>
-        <span>Valor de recebimento</span>
+        <span>Valor de Recebimento</span>
       </div>
     </div>
   </section>
@@ -112,13 +186,11 @@
       messagingSenderId: "646397677016",
       appId: "1:646397677016:web:f05ca27a38439568bff6ad"
     };
-
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
     const userId = localStorage.getItem("telefoneLogado");
     const userRef = db.ref("usuarios/" + userId);
 
-    // Mostrar saldos
     document.addEventListener("DOMContentLoaded", () => {
       if (!userId) {
         alert("Usuário não logado.");
@@ -131,106 +203,55 @@
         const saldoConta = parseFloat(data.saldoConta ?? data.saldo ?? 20).toFixed(2);
         const renda = parseFloat(data.renda || 0).toFixed(2);
         const recebimento = parseFloat(data.recebimento || 0).toFixed(2);
+        const planoComprado = data.planoComprado || false; // Checa se o usuário comprou o plano
 
         document.getElementById("saldo-conta").textContent = "R$ " + saldoConta;
         document.getElementById("renda-acumulada").textContent = "R$ " + renda;
         document.getElementById("valor-recebimento").textContent = "R$ " + recebimento;
 
-        // Se os dados bancários já estiverem salvos, não exibe o formulário
-        if (data.contaBancaria) {
-          document.getElementById("nomeTitular").value = data.contaBancaria.nomeTitular;
-          document.getElementById("tipoChave").value = data.contaBancaria.tipoChave;
-          document.getElementById("chavePix").value = data.contaBancaria.chavePix;
-          document.getElementById("salvarConta").disabled = true; // Desativa o botão de salvar
+        // Verifica se o saque pode ser feito (somente se o plano foi comprado)
+        if (!planoComprado) {
+          document.getElementById("confirmarSaque").disabled = true;
+          document.getElementById("status").textContent = "Você precisa comprar um plano para liberar o saque.";
         }
       });
     });
 
-    // Salvar conta bancária
-    document.getElementById("salvarConta").addEventListener("click", () => {
-      const nome = document.getElementById("nomeTitular").value;
-      const tipo = document.getElementById("tipoChave").value;
-      const chave = document.getElementById("chavePix").value;
-
-      if (!nome || !chave) {
-        alert("Preencha todos os campos da conta.");
-        return;
-      }
-
-      userRef.update({
-        contaBancaria: {
-          nomeTitular: nome,
-          tipoChave: tipo,
-          chavePix: chave
-        }
-      });
-
-      alert("Conta bancária salva com sucesso!");
-      document.getElementById("salvarConta").disabled = true; // Desativa o botão após salvar
-    });
-
-    // Função para calcular o valor líquido após a taxa de 12%
+    // Função para calcular o valor líquido do saque
     function calcularValorRecebido() {
-      const valor = parseFloat(document.getElementById("valorSaque").value);
-      if (!isNaN(valor) && valor >= 20) {
-        const taxa = valor * 0.12;
-        const valorLiquido = valor - taxa;
-        document.getElementById("valorLiquido").textContent = "R$ " + valorLiquido.toFixed(2);
+      const valorSaque = parseFloat(document.getElementById("valorSaque").value) || 0;
+      if (valorSaque >= 20) {
+        document.getElementById("valorLiquido").textContent = "R$ " + valorSaque.toFixed(2);
+      } else {
+        document.getElementById("valorLiquido").textContent = "R$ 0.00";
       }
     }
 
-    // Fazer saque
-    document.getElementById("confirmarSaque").addEventListener("click", async () => {
-      const valor = parseFloat(document.getElementById("valorSaque").value);
-      if (isNaN(valor) || valor < 20) {
-        alert("O valor mínimo para saque é R$20.");
+    // Função para realizar o saque
+    document.getElementById("confirmarSaque").addEventListener("click", () => {
+      const valorSaque = parseFloat(document.getElementById("valorSaque").value) || 0;
+      if (valorSaque < 20) {
+        alert("O valor mínimo para saque é R$ 20,00.");
         return;
       }
 
-      const snapshot = await userRef.once("value");
-      const data = snapshot.val() || {};
-      const saldoAtual = parseFloat(data.saldoConta ?? 0);
+      const saldoAtual = parseFloat(document.getElementById("saldo-conta").textContent.replace('R$ ', '').replace(',', '.')) || 0;
 
-      if (valor > saldoAtual) {
-        alert("Saldo insuficiente.");
-        return;
+      if (valorSaque > saldoAtual) {
+        alert("Saldo insuficiente para saque.");
+      } else {
+        const novoSaldo = saldoAtual - valorSaque;
+        userRef.update({
+          saldoConta: novoSaldo.toFixed(2)
+        }).then(() => {
+          alert("Saque realizado com sucesso!");
+          document.getElementById("saldo-conta").textContent = "R$ " + novoSaldo.toFixed(2);
+        }).catch(error => {
+          alert("Erro ao realizar saque: " + error.message);
+        });
       }
-
-      const taxa = valor * 0.12;
-      const valorLiquido = valor - taxa;
-      const novoSaldo = saldoAtual - valor;
-
-      // Atualiza dados do usuário
-      await userRef.update({
-        saldoConta: novoSaldo,
-        recebimento: valorLiquido
-      });
-
-      // Registra a retirada no extrato
-      const extratoRef = db.ref("usuarios/" + userId + "/extratoRetirada").push();
-      extratoRef.set({
-        valor: valor.toFixed(2),
-        recebimento: valorLiquido.toFixed(2),
-        status: "Aprovado",
-        ultimoCheckin: new Date().toLocaleString()
-      });
-
-      // Registra no painel do admin
-      const painelRef = db.ref("painel/saques").push();
-      painelRef.set({
-        telefone: userId,
-        nomeTitular: data?.contaBancaria?.nomeTitular ?? "Não informado",
-        chavePix: data?.contaBancaria?.chavePix ?? "Não informado",
-        tipoChave: data?.contaBancaria?.tipoChave ?? "Não informado",
-        valor: valor,
-        status: "Aprovado",
-        horario: new Date().toLocaleString()
-      });
-
-      alert("Saque solicitado com sucesso!");
-      window.location.href = "index.html";
     });
-
   </script>
+
 </body>
 </html>
