--- a/saque.html
+++ b/saque.html
@@ -4,126 +4,93 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Carteira e Saque</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <style>
     body {
+      background-color: #000;
+      color: #fff;
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #000;
     }
+
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 15px 20px;
-      background-color: #111;
-      border-bottom: 1px solid #333;
-      color: white;
+      background-color: #222;
+      border-bottom: 1px solid #444;
     }
-    header a {
+
+    h2 {
+      margin: 0;
+    }
+
+    a {
       text-decoration: none;
-      color: #00f0ff;
-      font-weight: bold;
+      color: #007bff;
     }
-    .carteira {
-      padding: 20px 10px;
-      text-align: center;
+
+    .carteira, .conta, .saque {
+      padding: 20px;
+      margin: 10px;
+      background-color: #333;
+      border-radius: 5px;
     }
+
     .saldos {
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      text-align: center;
-      color: white;
     }
+
     .saldo {
-      padding: 10px;
-      background: #111;
-      width: 30%;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,240,255,0.3);
+      text-align: center;
     }
+
     .saldo img {
       width: 50px;
-      height: 50px;
     }
-    .saldo p {
-      margin: 10px 0 5px;
-      font-size: 20px;
-      font-weight: bold;
-    }
-    .saldo span {
+
+    label, input, select, button {
       display: block;
-      font-size: 14px;
-      color: #ccc;
+      margin: 10px 0;
+      width: 100%;
     }
-    section.conta, section.saque {
-      background: #111;
-      margin: 20px auto;
-      padding: 20px;
-      width: 90%;
-      max-width: 400px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(255,255,255,0.1);
-      text-align: center;
-      color: white;
-    }
-    section h2 {
-      margin-bottom: 20px;
-      font-size: 24px;
-      color: #00f0ff;
-    }
-    label {
-      display: block;
-      text-align: left;
-      margin: 10px 0 5px;
-      font-weight: bold;
-      color: white;
-    }
+
     input, select {
-      width: 100%;
       padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #555;
-      border-radius: 8px;
-      background: #222;
-      color: white;
-      font-size: 16px;
+      background-color: #555;
+      color: #fff;
+      border: 1px solid #444;
+      border-radius: 5px;
     }
+
     button {
-      width: 100%;
-      padding: 12px;
-      background-color: #28a745;
+      padding: 10px;
+      background-color: #007bff;
       color: #fff;
       border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      font-weight: bold;
+      border-radius: 5px;
       cursor: pointer;
-      margin-top: 10px;
     }
-    button:disabled {
-      background-color: #555;
-      cursor: not-allowed;
-    }
-    #valorLiquido {
-      color: #28a745;
-    }
-    #status {
-      margin-top: 10px;
-      font-weight: bold;
-      color: #dc3545;
-    }
-  </style>
 
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+    button:disabled {
+      background-color: #ccc;
+    }
+
+    .valor-recebido {
+      font-weight: bold;
+    }
+
+  </style>
 </head>
 <body>
 
   <!-- BARRA SUPERIOR -->
   <header>
     <h2>Carteira</h2>
+    <!-- Link para ver o extrato -->
     <a href="extrato.html">Ver Extrato</a>
   </header>
 
@@ -133,17 +100,17 @@
       <div class="saldo">
         <img src="10004.png" alt="">
         <p id="saldo-conta">R$ 0.00</p>
-        <span>Saldo da Conta</span>
+        <span>Saldo da conta</span>
       </div>
       <div class="saldo">
         <img src="10004.png" alt="">
         <p id="renda-acumulada">R$ 0.00</p>
-        <span>Renda Acumulada</span>
+        <span>Renda acumulada</span>
       </div>
       <div class="saldo">
         <img src="10004.png" alt="">
         <p id="valor-recebimento">R$ 0.00</p>
-        <span>Valor de Recebimento</span>
+        <span>Valor de recebimento</span>
       </div>
     </div>
   </section>
@@ -171,8 +138,9 @@
     <h2>Saque</h2>
     <label>Valor para saque (mínimo R$20):</label>
     <input type="number" id="valorSaque" placeholder="Ex: 100" oninput="calcularValorRecebido()" />
-    <p><strong>Valor a ser recebido (após taxa de 12%): <span id="valorLiquido">R$ 0.00</span></strong></p>
-    <button id="confirmarSaque" disabled>Sacar</button>
+    <p><strong>Valor da taxa (12%): <span id="valorTaxa">R$ 0.00</span></strong></p>
+    <p><strong>Valor a ser recebido: <span id="valorLiquido">R$ 0.00</span></strong></p>
+    <button id="confirmarSaque">Sacar</button>
     <p id="status"></p>
   </section>
 
@@ -186,11 +154,13 @@
       messagingSenderId: "646397677016",
       appId: "1:646397677016:web:f05ca27a38439568bff6ad"
     };
+
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
     const userId = localStorage.getItem("telefoneLogado");
     const userRef = db.ref("usuarios/" + userId);
 
+    // Mostrar saldos
     document.addEventListener("DOMContentLoaded", () => {
       if (!userId) {
         alert("Usuário não logado.");
@@ -203,87 +173,107 @@
         const saldoConta = parseFloat(data.saldoConta ?? data.saldo ?? 20).toFixed(2);
         const renda = parseFloat(data.renda || 0).toFixed(2);
         const recebimento = parseFloat(data.recebimento || 0).toFixed(2);
-        const planoComprado = data.planoComprado || false;
 
         document.getElementById("saldo-conta").textContent = "R$ " + saldoConta;
         document.getElementById("renda-acumulada").textContent = "R$ " + renda;
         document.getElementById("valor-recebimento").textContent = "R$ " + recebimento;
 
-        // Preencher os dados da conta bancária
-        document.getElementById("nomeTitular").value = data.nomeTitular || "";
-        document.getElementById("tipoChave").value = data.tipoChave || "email";
-        document.getElementById("chavePix").value = data.chavePix || "";
-
-        if (!planoComprado) {
-          document.getElementById("confirmarSaque").disabled = true;
-          document.getElementById("status").textContent = "Você precisa comprar um plano para liberar o saque.";
-        } else {
-          document.getElementById("confirmarSaque").disabled = false;
-          document.getElementById("status").textContent = "";
-        }
-
-        // Libera o saque se o saldo for superior a R$20
-        if (saldoConta >= 20) {
-          document.getElementById("confirmarSaque").disabled = false;
+        // Se os dados bancários já estiverem salvos, não exibe o formulário
+        if (data.contaBancaria) {
+          document.getElementById("nomeTitular").value = data.contaBancaria.nomeTitular;
+          document.getElementById("tipoChave").value = data.contaBancaria.tipoChave;
+          document.getElementById("chavePix").value = data.contaBancaria.chavePix;
+          document.getElementById("salvarConta").disabled = true; // Desativa o botão de salvar
         }
       });
     });
 
+    // Salvar conta bancária
     document.getElementById("salvarConta").addEventListener("click", () => {
-      const nomeTitular = document.getElementById("nomeTitular").value;
-      const tipoChave = document.getElementById("tipoChave").value;
-      const chavePix = document.getElementById("chavePix").value;
+      const nome = document.getElementById("nomeTitular").value;
+      const tipo = document.getElementById("tipoChave").value;
+      const chave = document.getElementById("chavePix").value;
 
-      if (!nomeTitular || !tipoChave || !chavePix) {
-        alert("Por favor, preencha todos os campos.");
+      if (!nome || !chave) {
+        alert("Preencha todos os campos da conta.");
         return;
       }
 
       userRef.update({
-        nomeTitular: nomeTitular,
-        tipoChave: tipoChave,
-        chavePix: chavePix
-      }).then(() => {
-        alert("Conta bancária salva com sucesso!");
-      }).catch(error => {
-        alert("Erro ao salvar conta bancária: " + error.message);
+        contaBancaria: {
+          nomeTitular: nome,
+          tipoChave: tipo,
+          chavePix: chave
+        }
       });
+
+      alert("Conta bancária salva com sucesso!");
+      document.getElementById("salvarConta").disabled = true; // Desativa o botão após salvar
     });
 
+    // Função para calcular o valor líquido após a taxa de 12%
     function calcularValorRecebido() {
-      const valorSaque = parseFloat(document.getElementById("valorSaque").value) || 0;
-      const taxa = 0.12;
-      if (valorSaque >= 20) {
-        const valorLiquido = valorSaque * (1 - taxa);
+      const valor = parseFloat(document.getElementById("valorSaque").value);
+      if (!isNaN(valor) && valor >= 20) {
+        const taxa = valor * 0.12;
+        const valorLiquido = valor - taxa;
+        document.getElementById("valorTaxa").textContent = "R$ " + taxa.toFixed(2);
         document.getElementById("valorLiquido").textContent = "R$ " + valorLiquido.toFixed(2);
-      } else {
-        document.getElementById("valorLiquido").textContent = "R$ 0.00";
       }
     }
 
-    document.getElementById("confirmarSaque").addEventListener("click", () => {
-      const valorSaque = parseFloat(document.getElementById("valorSaque").value) || 0;
-      if (valorSaque < 20) {
-        alert("O valor mínimo para saque é R$ 20,00.");
+    // Fazer saque
+    document.getElementById("confirmarSaque").addEventListener("click", async () => {
+      const valor = parseFloat(document.getElementById("valorSaque").value);
+      if (isNaN(valor) || valor < 20) {
+        alert("O valor mínimo para saque é R$20.");
         return;
       }
 
-      const saldoConta = parseFloat(document.getElementById("saldo-conta").textContent.replace("R$ ", "").replace(",", "."));
-      if (valorSaque > saldoConta) {
-        alert("Saldo insuficiente para o saque.");
+      const snapshot = await userRef.once("value");
+      const data = snapshot.val() || {};
+      const saldoAtual = parseFloat(data.saldoConta ?? 0);
+
+      if (valor > saldoAtual) {
+        alert("Saldo insuficiente.");
         return;
       }
 
-      const valorLiquido = valorSaque * 0.88;
-      userRef.update({
-        saldoConta: saldoConta - valorSaque,
-        renda: parseFloat(document.getElementById("renda-acumulada").textContent.replace("R$ ", "").replace(",", "."))
-      }).then(() => {
-        alert("Saque realizado com sucesso! Valor recebido: R$ " + valorLiquido.toFixed(2));
-      }).catch(error => {
-        alert("Erro ao realizar saque: " + error.message);
+      const taxa = valor * 0.12;
+      const valorLiquido = valor - taxa;
+      const novoSaldo = saldoAtual - valor;
+
+      // Atualiza dados do usuário
+      await userRef.update({
+        saldoConta: novoSaldo,
+        recebimento: valorLiquido
       });
+
+      // Registra a retirada no extrato
+      const extratoRef = db.ref("usuarios/" + userId + "/extratoRetirada").push();
+      extratoRef.set({
+        valor: valor.toFixed(2),
+        recebimento: valorLiquido.toFixed(2),
+        status: "Aprovado",
+        ultimoCheckin: new Date().toLocaleString()
+      });
+
+      // Registra no painel do admin
+      const painelRef = db.ref("painel/saques").push();
+      painelRef.set({
+        telefone: userId,
+        nomeTitular: data?.contaBancaria?.nomeTitular ?? "Não informado",
+        chavePix: data?.contaBancaria?.chavePix ?? "Não informado",
+        tipoChave: data?.contaBancaria?.tipoChave ?? "Não informado",
+        valor: valor,
+        status: "Aprovado",
+        horario: new Date().toLocaleString()
+      });
+
+      alert("Saque solicitado com sucesso!");
+      window.location.href = "index.html";
     });
+
   </script>
 </body>
 </html>
